; ModuleID = '/home/carl/AnghaBench/sway/sway/input/extr_input-manager.c_device_is_touchpad.c'
source_filename = "/home/carl/AnghaBench/sway/sway/input/extr_input-manager.c_device_is_touchpad.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_input_device = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i64 }
%struct.libinput_device = type { i32 }

@WLR_INPUT_DEVICE_POINTER = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sway_input_device*)* @device_is_touchpad to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @device_is_touchpad(%struct.sway_input_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.sway_input_device*, align 8
  %4 = alloca %struct.libinput_device*, align 8
  store %struct.sway_input_device* %0, %struct.sway_input_device** %3, align 8
  %5 = load %struct.sway_input_device*, %struct.sway_input_device** %3, align 8
  %6 = getelementptr inbounds %struct.sway_input_device, %struct.sway_input_device* %5, i32 0, i32 0
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @WLR_INPUT_DEVICE_POINTER, align 8
  %11 = icmp ne i64 %9, %10
  br i1 %11, label %18, label %12

12:                                               ; preds = %1
  %13 = load %struct.sway_input_device*, %struct.sway_input_device** %3, align 8
  %14 = getelementptr inbounds %struct.sway_input_device, %struct.sway_input_device* %13, i32 0, i32 0
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %16 = call i32 @wlr_input_device_is_libinput(%struct.TYPE_3__* %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %12, %1
  store i32 0, i32* %2, align 4
  br label %28

19:                                               ; preds = %12
  %20 = load %struct.sway_input_device*, %struct.sway_input_device** %3, align 8
  %21 = getelementptr inbounds %struct.sway_input_device, %struct.sway_input_device* %20, i32 0, i32 0
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %21, align 8
  %23 = call %struct.libinput_device* @wlr_libinput_get_device_handle(%struct.TYPE_3__* %22)
  store %struct.libinput_device* %23, %struct.libinput_device** %4, align 8
  %24 = load %struct.libinput_device*, %struct.libinput_device** %4, align 8
  %25 = call i64 @libinput_device_config_tap_get_finger_count(%struct.libinput_device* %24)
  %26 = icmp sgt i64 %25, 0
  %27 = zext i1 %26 to i32
  store i32 %27, i32* %2, align 4
  br label %28

28:                                               ; preds = %19, %18
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i32 @wlr_input_device_is_libinput(%struct.TYPE_3__*) #1

declare dso_local %struct.libinput_device* @wlr_libinput_get_device_handle(%struct.TYPE_3__*) #1

declare dso_local i64 @libinput_device_config_tap_get_finger_count(%struct.libinput_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
